[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Back.png" type="Texture" id=4]
[ext_resource path="res://Interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main menu.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_right = 1030.0
margin_bottom = 598.0
mouse_filter = 2
color = Color( 0.160784, 0.0313726, 0.34902, 1 )

[node name="Camera" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )
anchor_mode = 0
current = true
zoom = Vector2( 2, 2 )

[node name="Map" type="ParallaxBackground" parent="."]

[node name="Level1" type="ParallaxLayer" parent="Map"]
position = Vector2( 242, 590 )
motion_scale = Vector2( 1.1, 1.1 )

[node name="Level1" type="TextureButton" parent="Map/Level1"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level1/Level1"]
margin_right = 500.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "1
Cassiopea"
align = 1
valign = 1

[node name="Level2" type="ParallaxLayer" parent="Map"]
position = Vector2( 552.948, 30.2251 )
motion_scale = Vector2( 1.3, 1.1 )

[node name="Level2" type="TextureButton" parent="Map/Level2"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level2/Level2"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "2
Andromeda"
align = 1
valign = 1

[node name="Level3" type="ParallaxLayer" parent="Map"]
position = Vector2( 180.763, -63.4317 )
motion_scale = Vector2( 1.5, 1.9 )

[node name="Level3" type="TextureButton" parent="Map/Level3"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level3/Level3"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "3
Apus"
align = 1
valign = 1

[node name="Level4" type="ParallaxLayer" parent="Map"]
position = Vector2( 469.362, -343.654 )
motion_scale = Vector2( 0.6, 1.9 )

[node name="Level4" type="TextureButton" parent="Map/Level4"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level4/Level4"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "4
Aquarius"
align = 1
valign = 1

[node name="Level5" type="ParallaxLayer" parent="Map"]
position = Vector2( 981.69, -187.812 )
motion_scale = Vector2( 1.2, 0.3 )

[node name="Level5" type="TextureButton" parent="Map/Level5"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level5/Level5"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "5
Aquila"
align = 1
valign = 1

[node name="Level6" type="ParallaxLayer" parent="Map"]
position = Vector2( 605.107, 551.406 )
motion_scale = Vector2( 0.5, 0.6 )

[node name="Level6" type="TextureButton" parent="Map/Level6"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level6/Level6"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "6
Ara"
align = 1
valign = 1

[node name="Level7" type="ParallaxLayer" parent="Map"]
position = Vector2( 1163.01, 121.823 )
motion_scale = Vector2( 0.5, 0.6 )

[node name="Level7" type="TextureButton" parent="Map/Level7"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level7/Level7"]
margin_left = 27.895
margin_right = 585.895
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "7
Aries"
align = 1
valign = 1

[node name="Level8" type="ParallaxLayer" parent="Map"]
position = Vector2( 1181.46, 435.556 )
motion_scale = Vector2( 1.6, 0.6 )
motion_offset = Vector2( 5, 0 )

[node name="Level8" type="TextureButton" parent="Map/Level8"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level8/Level8"]
margin_left = 21.7434
margin_right = 579.743
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "8
Auriga"
align = 1
valign = 1

[node name="Level9" type="ParallaxLayer" parent="Map"]
position = Vector2( 939.78, 609.265 )
motion_offset = Vector2( 5, 0 )

[node name="Level9" type="TextureButton" parent="Map/Level9"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level9/Level9"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "9
Antlia"
align = 1
valign = 1

[node name="Level10" type="ParallaxLayer" parent="Map"]
position = Vector2( 900, 300 )
motion_scale = Vector2( 2.3, 1.2 )

[node name="Level10" type="TextureButton" parent="Map/Level10"]
margin_right = 242.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Map/Level10/Level10"]
margin_right = 558.0
margin_bottom = 399.999
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "10
Bo√∂tes"
align = 1
valign = 1

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 99

[node name="Back" type="TextureButton" parent="ParallaxBackground2"]
margin_right = 60.0
margin_bottom = 60.0
texture_normal = ExtResource( 4 )

[node name="Interface" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 900.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 602.0

[node name="Main menu" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="ParallaxBackground2/Back" to="." method="on_back"]
[connection signal="pressed" from="Main menu" to="." method="_on_Main_menu_pressed"]
